Bug 462891 - Folder disappears when moving it onto itself
Summary: Folder disappears when moving it onto itself
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-12-11 08:13 UTC by genghiskhan
Modified: 2023-04-09 18:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description genghiskhan 2022-12-11 08:13:50 UTC
Tested on bookmarks toolbar
Comment 1 Juraj 2022-12-17 10:51:32 UTC
Interesting, can confirm.
Comment 2 Juraj 2023-04-09 18:12:21 UTC
Git commit 5abf89f0be466207ea9679ac454545a0c17018a2 by Juraj Oravec.
Committed on 09/04/2023 at 18:08.
Pushed by jurajo into branch 'master'.

Fix: Folder disappears when moving it onto itself

Happens on BookmarksToolbar.
FIXED-IN: 23.04.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +4    -0    src/lib/bookmarks/bookmarkstoolbarbutton.cpp

https://invent.kde.org/network/falkon/commit/5abf89f0be466207ea9679ac454545a0c17018a2
Comment 3 Juraj 2023-04-09 18:13:24 UTC
Git commit bb533f47c03a224237e0f17f09b19a6e466af007 by Juraj Oravec.
Committed on 09/04/2023 at 18:12.
Pushed by jurajo into branch 'release/23.04'.

Fix: Folder disappears when moving it onto itself

Happens on BookmarksToolbar.
FIXED-IN: 23.04.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +4    -0    src/lib/bookmarks/bookmarkstoolbarbutton.cpp

https://invent.kde.org/network/falkon/commit/bb533f47c03a224237e0f17f09b19a6e466af007