Fix: Folder disappears when moving it onto itself

Happens on BookmarksToolbar.

BUG: 462891
FIXED-IN: 23.04.0

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>